CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)
PROJECT(MEDExample C CXX)

# ===================
SET(CONFIGURATION_ROOT_DIR $ENV{CONFIGURATION_ROOT_DIR} CACHE PATH "Path to the Salome CMake configuration files")
IF(EXISTS ${CONFIGURATION_ROOT_DIR})
  LIST(APPEND CMAKE_MODULE_PATH "${CONFIGURATION_ROOT_DIR}/cmake")
  INCLUDE(SalomeMacros)
ELSE()
  MESSAGE(FATAL_ERROR "We absolutely need the Salome CMake configuration files, please define CONFIGURATION_ROOT_DIR !")
ENDIF()

# Find MEDCoupling (required)
# ==========================
SET(MEDCOUPLING_ROOT_DIR $ENV{MEDCOUPLING_ROOT_DIR} CACHE PATH "Path to the MEDCoupling tool")
IF(EXISTS ${MEDCOUPLING_ROOT_DIR})
  LIST(APPEND CMAKE_MODULE_PATH "${MEDCOUPLING_ROOT_DIR}/cmake_files")
  FIND_PACKAGE(SalomeMEDCoupling REQUIRED)   # will reload HDF5, MEDFile, XDR, etc ...
ELSE(EXISTS ${MEDCOUPLING_ROOT_DIR})
  MESSAGE(FATAL_ERROR "We absolutely need the MEDCoupling tool, please define MEDCOUPLING_ROOT_DIR !")
ENDIF(EXISTS ${MEDCOUPLING_ROOT_DIR})

SET(BUILD_SHARED_LIBS TRUE)
INCLUDE_DIRECTORIES(
  ${MEDCOUPLING_INCLUDE_DIRS}
)

SET(_link_LIBRARIES
  ${MEDCoupling_medcoupling}
  ${MEDCoupling_interpkernel}
)

SET(_lib_HEADERS
  ICOCO.hxx
)

SET(_lib_SOURCES
  ICOCO.cxx
)

ADD_LIBRARY(ICOCOCXX ${_lib_SOURCES})
TARGET_LINK_LIBRARIES(ICOCOCXX ${_link_LIBRARIES} )

INSTALL(TARGETS ICOCOCXX DESTINATION lib)
INSTALL(FILES ${_lib_HEADERS} DESTINATION include)

